--- a/css/main.css
+++ b/css/main.css
@@ -51,3 +51,9 @@ calcite-loader {
 calcite-rating {
   margin-top: 0.25rem;
 }
+
+.pop-chart {
+  width: 100% !important;
+  max-height: 250px;
+  margin-bottom: 1rem;
+}
