--- a/css/main.css
+++ b/css/main.css
@@ -57,3 +57,14 @@ calcite-rating {
   max-height: 250px;
   margin-bottom: 1rem;
 }
+
+.panel-tool-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.panel-button {
+  width: 80%;
+  margin: 8px;
+}
